add favourites  departments search fix
